--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.4.0-beta02'
-        lifecycle_version = "2.6.0-rc01"
+        compose_version = '1.4.0-rc01'
+        lifecycle_version = "2.6.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
